--- a/app/home/hero.css
+++ b/app/home/hero.css
@@ -1,5 +1,11 @@
 .bounce {
-    animation: bounce 2s infinite;
+    animation: bounce 3s infinite;
+    background-color: #a3a1a165;
+    width: 4rem;
+    height: 4rem;
+    padding: 1rem;
+    border-radius: 20%;
+    border: #a3a1a1ba solid 1px;
   }
 
   @keyframes bounce {
@@ -8,6 +14,25 @@
     }
     50% {
       transform: translateY(-10px);
+    }
+  }
+.slide {
+    animation: slide 3s infinite;
+    background-color: #a3a1a165;
+    width: 4rem;
+    height: 4rem;
+    padding: 1rem;
+    border-radius: 20%;
+    border: #a3a1a1ba solid 1px;
+  }
+
+
+  @keyframes slide {
+    0%, 100% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(-10px);
     }
   }
 
